name:                ab1Parser
version:             0.1.1.4
-- synopsis:
-- description:
homepage:            https://github.com/hyraxbio/hyraxAbi/#readme
license:             BSD3
license-file:        LICENSE
author:              HyraxBio
maintainer:          andre@hyraxbio.com
copyright:           2018 HyraxBio
category:            Bioinformatics
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  ghc-options:         -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -Wimplicit-prelude -Wcompat -Wredundant-constraints -Wnoncanonical-monad-instances
  hs-source-dirs:      src
  exposed-modules:     Hyrax.Abi
                     , Hyrax.Abi.Read
                     , Hyrax.Abi.Write
                     , Hyrax.Abi.Fasta
  build-depends:       base >= 4.7 && < 5
                     , protolude
                     , text
                     , bytestring
                     , binary
                     , directory
                     , filepath
                     , safe-exceptions
                     , split
  default-language:    Haskell2010

executable ab1Parser-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -Wimplicit-prelude -Wcompat -Wredundant-constraints -Wnoncanonical-monad-instances
  build-depends:       base
                     , ab1Parser
                     , protolude
                     , text
                     , bytestring
                     , pretty-show
                     , hscolour
  default-language:    Haskell2010

test-suite ab1Parser-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Tests.hs
  build-depends:       base
                     , ab1Parser
                     , protolude
                     , text
                     , bytestring
                     , text
                     , binary
                     , hedgehog
                     , safe-exceptions
  other-modules:       AbiTests
                     , FastaTests
                     , Generators
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -Wimplicit-prelude -Wcompat -Wredundant-constraints -Wnoncanonical-monad-instances
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/hyraxbio/hyraxAbi
