name:                hyraxAbi
version:             0.2.3.1
synopsis:            Modules for parsing, generating and manipulating AB1 files.
homepage:            https://github.com/hyraxbio/hyraxAbi/#readme
license:             BSD3
license-file:        LICENSE
author:              HyraxBio
maintainer:          andre@hyraxbio.co.za, andre@andrevdm.com
copyright:           2018 HyraxBio
category:            Bioinformatics
build-type:          Simple
extra-source-files:  README.md
extra-doc-files:     docs/*.png
cabal-version:       1.18
description:         This library provides functionality for parsing, modifying, writing and generating ABI files
                     <<docs/eg_multi_mix.png>>
                     .
                     Any AB1 file confirming to the standard at <http://www6.appliedbiosystems.com/support/software_community/ABIF_File_Format.pdf> should be supported.
                     .   
                     This library also support generating a minimal ABI file from a FASTA input sequence.
                     .
                     A basic terminal application that can dump and generate AB1s is included. See <https://github.com/hyraxbio/hyraxAbi/blob/master/app/Main.hs>
                     .
                     See "Examples" directory

library
  ghc-options:         -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -Wimplicit-prelude -Wcompat -Wredundant-constraints -Wnoncanonical-monad-instances
  hs-source-dirs:      src
  exposed-modules:     Hyrax.Abi
                     , Hyrax.Abi.Read
                     , Hyrax.Abi.Write
                     , Hyrax.Abi.Generate
                     , Hyrax.Abi.Fasta
                     , Examples
                     , Examples.AddComment
                     , Examples.RemoveComments
                     , Examples.ReadAb1
  build-depends:       base >= 4.7 && < 5
                     , protolude >= 0.2.2 && < 0.2.3
                     , text >= 1.2.3.0 && < 1.2.4.0
                     , bytestring >= 0.10.8.2 && < 0.10.9.0
                     , binary >= 0.8.5.1 && < 0.8.6.0
                     , directory >= 1.3.0.2 && < 1.3.2.0
                     , filepath >= 1.4.1.2 && < 1.4.2.0
  default-language:    Haskell2010

executable hyraxAbi-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -Wimplicit-prelude -Wcompat -Wredundant-constraints -Wnoncanonical-monad-instances
  build-depends:       base
                     , hyraxAbi
                     , protolude >= 0.2.2 && < 0.2.3
                     , text >= 1.2.3.0 && < 1.2.4.0
                     , bytestring >= 0.10.8.2 && < 0.10.9.0
                     , pretty-show >= 1.6.16 && < 1.7.0
                     , hscolour >= 1.24.4 && < 1.25.0
  default-language:    Haskell2010

test-suite hyraxAbi-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Tests.hs
  build-depends:       base
                     , hyraxAbi
                     , protolude >= 0.2.2 && < 0.2.3
                     , text >= 1.2.3.0 && < 1.2.4.0
                     , bytestring >= 0.10.8.2 && < 0.10.9.0
                     , binary >= 0.8.5.1 && < 0.8.6.0
                     , hedgehog >= 0.5.3 && < 0.6.2
  other-modules:       AbiTests
                     , FastaTests
                     , Generators
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -Wimplicit-prelude -Wcompat -Wredundant-constraints -Wnoncanonical-monad-instances
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/hyraxbio/hyraxAbi
